# bunner-router-rs

./: Cargo.toml  Makefile  PLAN.md  comparision.md  plan.md
src/: enums.rs  errors.rs  interner.rs  lib.rs  path.rs  pattern.rs  radix_tree.rs  readonly.rs  structures.rs  types.rs
src/errors/: codes.rs  error.rs  mod.rs
src/matcher/: mod.rs  params.rs  resolver.rs
src/path/: error.rs  mod.rs  normalize.rs
src/pattern/: analysis.rs  ast.rs  compiled.rs  error.rs  lexer.rs  matcher.rs  mod.rs  parser.rs  scoring.rs  segment.rs
src/radix/: alloc.rs  builder.rs  compression.rs  error.rs  indices.rs  insert.rs  memory.rs  mod.rs  tree.rs
src/radix_tree/: builder.rs  indices.rs  insert.rs  mask.rs  node.rs  static_map.rs  traversal.rs
src/readonly/: cache.rs  converter.rs  error.rs  mod.rs  snapshot.rs
src/registry/: mod.rs  stats.rs  store.rs
src/router/: error.rs  errors.rs  mod.rs  options.rs  preprocess.rs  readonly.rs  service.rs
src/tools/: interner.rs  mod.rs
tests/: pattern_parser.rs  router_cache.rs  router_integration.rs  router_lifecycle.rs  router_options.rs  routes_bulk.rs  routes_parameters.rs  routes_static.rs  routes_wildcards.rs
