[package]
name = "bunner_router_rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A lightweight HTTP Router library for Rust"
repository = "https://github.com/parkrevil/bunner-router-rs"
documentation = "https://github.com/parkrevil/bunner-router-rs"
homepage = "https://github.com/parkrevil/bunner-router-rs"
keywords = ["route", "router", "http", "web", "security", "middleware"]
categories = ["web-programming", "network-programming"]
authors = ["parkrevil"]
readme = "README.md"

[dependencies]
bitflags = "2.4"
bumpalo = "3.15"
hashbrown = "0.14"
memchr = "2.6"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.13"
tracing = "0.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
